# curriculum

./: .gitignore  MoonZoon.toml
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml
frontend/src/: events.rs  lib.rs  router.rs
frontend/src/pages/: home.rs  login.rs
public/css/: bulmaswatch.min.css
